clusters/my-cluster/ingress.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: test-service
spec:
  selector:
    app: podinfo
  ports:
  # Default port used by the image
  - port: 9898
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/pod"
        backend:
          service:
            name: test-service
            port:
              number: 9898
